# advent-of-code-2022

./: .gitignore  LICENSE  README.md
day-1/cpp/: CMakePresets.json  run.cpp
day-1/python/: run.py
day-1/rust/src/: main.rs
day-10/python/: run.py
day-11/python/: run.py
day-12/python/: run.py
day-13/python/: run.py
day-14/python/: run.py
day-15/python/: run.py
day-17/python/: run.py
day-18/python/: run.py
day-19/python/: run.py
day-2/python/: run.py
day-2/rust/src/: main.rs
day-20/python/: run.py
day-21/python/: run.py
day-22/python/: run.py
day-3/python/: run.py
day-3/rust/src/: main.rs
day-4/python/: run.py
day-5/python/: run.py
day-6/python/: run.py
day-7/cpp/: run.cpp
day-7/python/: run.py
day-7/rust/src/: main.rs
day-8-p2/python/: run.py
day-8/python/: run.py
day-9/python/: run.py
py-template/: run.py
templates/cpp/: CMakeLists.txt
templates/python/: run.py
